# gnu_guile-avahi

./: .arch-inventory  .gitignore  ChangeLog  Makefile.am  NEWS  README  THANKS  acinclude.m4  configure.ac  pre-inst-guile.in
debian/: changelog  control  copyright  rules
doc/: .arch-inventory  .gitignore  Makefile.am  extract-c-doc.scm  guile-avahi.texi
m4/: .arch-inventory  .gitignore  gnulib-cache.m4
modules/: Makefile.am  avahi.scm
modules/avahi/: client.scm  test.scm
modules/avahi/client/: lookup.scm  publish.scm
modules/system/documentation/: c-snarf.scm  output.scm
src/: .arch-inventory  .gitignore  Makefile.am  client.c  common.c  errors.c  errors.h  lookup.c  make-callback-header.scm  make-callback-trampolines.scm  make-enum-header.scm  make-enum-map.scm  make-smob-header.scm  make-smob-types.scm  publish.c  utils.c  utils.h  watch.c  watch.h
tests/: Makefile.am  errors.scm  guile-poll.scm  publish+browse.scm  publish+resolve.scm  publish.scm  simple-poll.scm  threaded-poll.scm
web/: GNUmakefile  guile-avahi.css  index.skb
